--- a/Samples.html
+++ b/Samples.html
@@ -33,9 +33,10 @@
 		<form method="get" action="/final-site/Bifurcation.pdf">
 			<button type="submit">Download</button>
 		</form>
-	</br>
-	</br>
-	</br>
+</article>
+</br>
+</br>
+</br>
 <footer>
 	<figure>
 		<a href="https://www.facebook.com/profile.php?id=100005451767708">
